# sdn-ml-ddos-mitigation

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
datasets/: dataset_info.txt  generate_full_dataset.py
docker/: Dockerfile.controller  Dockerfile.mininet  README.md
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  KNOWN_LIMITATIONS.md  SECURITY.md  V3.1.0_EVALUATION_REPORT.md
logs/: init_logs.sh
ml_model/: create_roc.py  train_model.py
network_topology/: ovs_config.sh  topology.py
sdn_controller/: mitigation_module.py  ryu.conf
src/sdn_ddos_detector/config/: ryu.conf  topology_config.py
src/sdn_ddos_detector/controller/: api_auth.py  ddos_controller.py
src/sdn_ddos_detector/datasets/: FEATURE_MAPPING.md  README.md  download_datasets.py
src/sdn_ddos_detector/ml/: circuit_breaker.py  drift_detector.py  evaluation.py  feature_engineering.py  generate_synthetic_dataset.py  train.py
src/sdn_ddos_detector/scripts/: analyze_logs.py  setup_tls.sh  sign_model.py
src/sdn_ddos_detector/traffic/: README.md  (+1 more)
tests/: conftest.py  test_dataset_collector.py  test_feature_extractor.py
tests/adversarial/: test_adversarial_robustness.py
tests/integration/: test_detection_pipeline.py
tests/unit/: test_aggregate_enqueue.py  test_api_auth.py  test_bounded_cache.py  test_circuit_breaker.py  test_controller_helpers.py  test_dataset_adapters.py  test_dataset_collector.py  test_drift_detector.py  test_feature_engineering.py
traffic_generation/: generate_normal.py
utilities/: dataset_collector.py  feature_extractor.py
(+11 files in other folders)
