[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdn-ddos-detector"
version = "3.1.0"
description = "SDN-Based DDoS Detection and Mitigation System using Machine Learning"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
dependencies = [
    "ryu>=4.34",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "joblib>=1.3",
    "cachetools>=5.3",
    "structlog>=23.0",
    "eventlet>=0.33",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock", "pytest-cov", "ruff", "mypy"]
ml = ["river>=0.21", "adversarial-robustness-toolbox>=1.15", "scipy>=1.10"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests",
    "integration: requires Mininet",
    "adversarial: adversarial ML tests (slow)",
    "slow: tests taking >10s",
]
